; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_sec.c_BTM_ReadLocalOobData.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_sec.c_BTM_ReadLocalOobData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BTM_SUCCESS = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8
@BTM_NO_RESOURCES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BTM_ReadLocalOobData() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @BTM_SUCCESS, align 4
  store i32 %2, i32* %1, align 4
  %3 = call i64 (...) @btsnd_hcic_read_local_oob_data()
  %4 = load i64, i64* @FALSE, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i32, i32* @BTM_NO_RESOURCES, align 4
  store i32 %7, i32* %1, align 4
  br label %8

8:                                                ; preds = %6, %0
  %9 = load i32, i32* %1, align 4
  ret i32 %9
}

declare dso_local i64 @btsnd_hcic_read_local_oob_data(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
